--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.89"
 light-sdk = "0.10.0"
 linked-hash-map = "0.5.6"
 rust_decimal = "1.36.0"
