--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ anyhow = "1.0.89"
 light-sdk = "0.10.0"
 linked-hash-map = "0.5.6"
 rust_decimal = "1.36.0"
+
+[dev-dependencies]
+tempdir = "0.3"
+rust_decimal_macros = "1.22"
